welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:9: error: ')' expected but ';' found.
  else(avance();avance())
               ^MethodsDogHouse:9: error: ';' expected but ')' found.
  else(avance();avance())
                        ^