welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse(){
  for(x<- 1 to 4){avance();avance();gauche()}
}
for(i<- 1 to 4){
  dogHouse()
  avance()
  avance()
  if(estFaceMur()){gauche();avance();avance()}
  else(avance();avance())
}